[package]
name = "wex-robot"
version = "0.2.0"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
] }
embassy-usb-logger = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
# embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = ["defmt" ] }
# embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
#     "defmt",
#     "tcp",
#     "udp",
#     "dns",
#     "dhcpv4",
#     # "medium-ethernet",
# ] }
# embassy-net-wiznet = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
# cyw43 = { version = "0.5", features = ["defmt", "firmware-logs", "bluetooth"] }
# cyw43-pio = { version = "0.8", features = ["defmt"] }

# defmt = "1.0.1"
# defmt-rtt = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
# embedded-hal-bus = { version = "0.2", features = ["async"] }
# embedded-io = { version = "0.6.0" }
# embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
# embedded-graphics = "0.8.1"
panic-reset = "0.1.1"
assign-resources = "0.4.1"
# ekv = "1.0.0"
embedded-storage = "0.3.1"
# micromath = "2.0.0"
# usbd-hid = "0.8.1"
static_cell = "2"
# chrono = { version = "^0.4", default-features = false}
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
    "firmware-logs",
    "bluetooth",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = [
    "defmt",
] }
log = "0.4.27"
chrono = { version = "0.4.41", default-features = false, features = [] }
# sntpc = { version = "0.6.0", default-features = false, features = [
#     "embassy-socket",
#     "log",
# ] }
rand_core = { version = "0.9.3", default-features = false }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "3d112c8d44e2ba38d8b001bcef54698cd29a2d8d", features = [
    "default-packet-pool-mtu-128",
] }
bt-hci = "0.3.2"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# sntpc = { git = "https://github.com/0xA54/sntpc", branch = "embassy-net-0.7" }
# embassy = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
# embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
