[package]
name = "wex-robot"
version = "0.2.0"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
embassy-rp = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
] }
embassy-usb-logger = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
] }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    # "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
usbd-hid = "0.8.1"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
panic-reset = "0.1.1"
assign-resources = "0.4.1"
embedded-storage = "0.3"
static_cell = "2.1"
cyw43 = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
    "firmware-logs",
    "bluetooth",
] }
cyw43-pio = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c", features = [
    "defmt",
] }
log = "0.4"
chrono = { version = "0.4.41", default-features = false, features = [] }
rand_core = { version = "0.9.3", default-features = false }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "5b40337c7c291e86cde74e423e7763c4315f5398", features = [
    "default-packet-pool-mtu-128",
] }
bt-hci = "0.6.0"


[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
# sntpc = { git = "https://github.com/0xA54/sntpc", branch = "embassy-net-0.7" }
# embassy = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
# embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
